reworked the grid in main to be aligned better

--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
     </section>
     <main>
         <article>
-            <h3>FlexBox Row</h3>
-            <p>Use these three properties to create a Flexbox row layout.</p>
-            <pre><code></code></pre>
+            <h3>Calc</h3>
+            <p>I will fill this in this weekend</p>
+            <pre><code>
+div {
+    width: calc(50% - 12px)
+}              
+            </code></pre>
         </article>
         <article>
             <h3>FlexBox Column</h3>
