added content to boxes, snippets for all!

--- a/index.html
+++ b/index.html
@@ -25,29 +25,56 @@ div {
             </code></pre>
         </article>
         <article>
-            <h3>FlexBox Column</h3>
+            <h3>Linear Gradients</h3>
             <p>Some smart words of wisdom</p>
-            <pre><code></code></pre>
+            <pre><code>
+div {
+background-image: linear-gradient(
+rgb(0,0,0) 0%,
+rgb(255,255,255) 100%
+);
+}</code></pre>
         </article>
         <article>
-            <h3>Flexbox Wrap and Center</h3>
+            <h3>Center Align Container</h3>
             <p>Some smart words of wisdom</p>
-            <pre><code></code></pre>
+            <pre><code>
+div {
+margin: 0 auto;
+}
+            </code></pre>
         </article>
         <article>
-            <h3>Grid Layout</h3>
+            <h3>CSS Transition</h3>
             <p>Some smart words of wisdom</p>
-            <pre><code></code></pre>
+            <pre><code>
+div {
+color: red;
+transition: all 300ms ease;
+}
+            </code></pre>
         </article>
         <article>
-            <h3>Transition</h3>
+            <h3>css Grid Layout</h3>
             <p>Some smart words of wisdom</p>
-            <pre><code></code></pre>
+            <pre><code>
+.grid {
+   display: grid;
+   width: 100%;
+   grid-template-columns:
+repeat(12, 1fr): 
+}
+            </code></pre>
         </article>
         <article>
-            <h3>Coming Soon</h3>
+            <h3>Center Element (Horizontally)</h3>
             <p>Some smart words of wisdom</p>
-            <pre><code></code></pre>
+            <pre><code>
+div {
+position: absolute;
+transform: translateX(-50%);
+}
+            </code></pre>
         </article>
     </main>
     <footer>Made with Determination and Caution ~SS~</footer>
